# Logistics-Management-App

./: README.md  README.txt
Q1_Cpp/: CMakeLists.txt
Q1_Cpp/include/Product/: Supplier.h
Q1_Cpp/include/Shipment/: Shipment.h
Q1_Cpp/include/Transport/: Ship.h  TransportCollection.h
Q1_Cpp/src/: CLI.cpp
Q1_Cpp/src/Product/: Product.cpp  Supplier.cpp
Q1_Cpp/src/Shipment/: Shipment.cpp
Q1_Java/: pom.xml
Q2/: pom.xml
Q3/: pom.xml
Q3_Cpp/: CMakeLists.txt
Q3_Cpp/include/: CLI.h
Q3_Cpp/include/Product/: Product.h
Q3_Cpp/include/Product/Book/: Book.h  FictionBook.h
Q3_Cpp/include/Product/Clothing/: Clothing.h
Q3_Cpp/include/Product/ComputerGame/: ActionGame.h  PuzzleGame.h
Q3_Cpp/include/Product/Electronic/: Smartphone.h
Q3_Cpp/include/Product/Food/: Food.h
Q3_Cpp/include/Product/Furniture/: Chair.h  Furniture.h
Q3_Cpp/include/Shipment/: ShipmentCollection.h
Q3_Cpp/include/Shipment/Packaging/: PackageCollection .h  Packaging.h
Q3_Cpp/include/Transport/: Aircraft.h  Transport.h  Truck.h
Q3_Cpp/src/: CLI.cpp
Q3_Cpp/src/Product/Book/: Book.cpp  NonFictionBook.cpp
Q3_Cpp/src/Product/Clothing/: Clothing.cpp
Q3_Cpp/src/Product/ComputerGame/: ComputerGame.cpp
Q3_Cpp/src/Product/Electronic/: Electronic.cpp  Television.cpp
Q3_Cpp/src/Product/Food/: CannedFood.cpp  Fruit.cpp
Q3_Cpp/src/Product/Furniture/: Chair.cpp
Q3_Cpp/src/Shipment/: ShipmentCollection.cpp
Q3_Cpp/src/Shipment/Customer/: Customer.cpp
Q3_Cpp/src/Shipment/Packaging/: PackagedCollection.cpp
Q3_Cpp/src/Transport/: Ship.cpp  TransportCollection.cpp
Q4/: pom.xml
(+129 files in other folders)
